inbox overflow fixed, messages scroll down

--- a/demos/chat/static/chat.css
+++ b/demos/chat/static/chat.css
@@ -17,7 +17,7 @@
 
 body,
 input {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16pt;
   color :#333;
 }
@@ -34,8 +34,8 @@ td {
 
 #body {
   position: absolute;
-  bottom: 70px;
-  left: 60px;
+  bottom: 30px;
+  left: 20px;
 }
 
 #input {
@@ -52,21 +52,23 @@ td {
 	text-align: left;
 }
 h1 {
+	font-size:100%;
 	color: #CCC;
 	font-size:16px;
 	font-family:Arial, Helvetica, sans-serif;
 }
 
 #chat {
+	position:relative;
 	float:left;
 	font-size:16px;
-	margin-top:5px;
-	margin-left:35px;
+	margin-top:15px;
+	margin-left:32px;
 	text-align: left;
 }
-#mail {
+#note {
 	float:left;
 	font-size:16px;
-	margin-top:5px;
+	margin-top:15px;
 	margin-left:25px;
 	text-align: left;
